# try-object-detection

./: .gitignore  README.md  pyproject.toml
tests/: test_try_object_detection.py
try_object_detection/detection/: __init__.py  mobile_net.py
try_object_detection/telegram_bot/: __main__.py  main.py
try_object_detection/utils/: io_utils.py  log.py  tar.py  types.py  ui.py
try_object_detection/workflow/: __init__.py  common.py  detect_objects.py  prepare_data.py
